--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
 				crossorigin="anonymous">
 		{% endblock %}
 
-		{% block extra_css}
-		{& endblock %}
+		{% block extra_css %}
+		{% endblock %}
 
 		{% block corejs %}
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -40,8 +40,14 @@
 			<div class="message-container"></div>
 		{% endif %}
 
+		{% block page_header %}
+		{% endblock %}
 
+		{% block content %}
+		{% endblock %}
 
+		{% block postloadjs %}
+		{% endblock %}
 
 	</body>
 
