--- a/templates/base.html
+++ b/templates/base.html
@@ -34,13 +34,41 @@
 		<title>Dynow Clothing! {% block extra_title %}{% endblock %}</title>
 	</head>
 	<body>
-		<header class="container-fluid fixed-top"></header>
+		<header class="container-fluid fixed-top">
+			<div class="row">
+				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+					<a href="{% url 'home' %}" class="nav-link main-logo-link">DYNOW LOGO</a>
+				</div>
+				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+					<form method="GET", action="">
+						<div class="input-group w-100">
+							<input type="text" name="q"  placeholder="Search our store" class="form-control border border-black rounded-0">
+							<div class="input-group-append">
+								<button type="submit" class="form-control btn btn-black border border-black rounded-0">
+									<span class="icon">
+										<i class="fas fa-search"></i>
+									</span>
+								</button>
+							</div>
+						</div>
+					</form>
+				</div>
+				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+					<ul class="lint-inline list-unstyled text-center text-lg-right my-0">
+						<li class="list-inline-item dropdown"></li>
+						<li class="list-inline-item"></li>
+
+					</ul>
+				</div>
+			</div>
+		</header>
 
 		{% if messages %}
 			<div class="message-container"></div>
 		{% endif %}
 
 		{% block page_header %}
+
 		{% endblock %}
 
 		{% block content %}
