add mobile header and main nav

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -71,6 +71,10 @@ body {
     border: 1px solid black !important;
 }
 
+.bg-blue {
+    background: #7FCBD8;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
