--- a/static/css/base.css
+++ b/static/css/base.css
@@ -117,3 +117,14 @@ body {
         padding-top: 164px;
     }
 }
+
+/* top padding for when navbar is collapsed */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+}
