--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -2,7 +2,7 @@
     <li class="list-inline-item">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
-              <div><i class="fas fa-search fa-lg"></i></div>
+              <div><i class="icon-green fas fa-search fa-lg"></i></div>
               <p class="my-0">Search</p>
           </div>
       </a>
@@ -11,7 +11,7 @@
               <div class="input-group w-100">
                   <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                   <div class="input-group-append">
-                      <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                      <button class="btn-green form-control btn btn-black border border-black rounded-0" type="submit">
                           <span class="icon">
                               <i class="fas fa-search"></i>
                           </span>
@@ -24,7 +24,7 @@
   <li class="list-inline-item dropdown">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
-              <div><i class="fas fa-user fa-lg"></i></div>
+              <div><i class="icon-green fas fa-user fa-lg"></i></div>
               <p class="my-0">My Account</p>
           </div>
       </a>
@@ -44,7 +44,7 @@
   <li class="list-inline-item">
       <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
           <div class="text-center">
-              <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+              <div><i class="icon-green fas fa-shopping-bag fa-lg"></i></div>
               <p class="my-0">
                   {% if grand_total %}
                       £{{ grand_total|floatformat:2 }}
