--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,6 +95,18 @@ a.category-badge > span.badge:hover {
     background: #7FCBD8;
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
 /* Product Card */
 
 .background-green {
