--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
 			</div>
 			<div id="deliver-banner" class="row text-center">
 				<div class="col bg-blue text-black">
-					<h4 class="logo-font my-1">Free delivery on orders over £{{ free_shipping_threshold }}</h4>
+					<h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}</h4>
 				</div>
 			</div>
 
