--- a/templates/includes/toasts/toast_success copy.html
+++ b/templates/includes/toasts/toast_success copy.html
@@ -1,9 +1,9 @@
-<!-- Bootstrap Toast (Success) - Inspired By Boutique Ado! -->
+<!-- Bootstrap Toast (Warning) - Inspired By Boutique Ado! -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-success"></div>
-    <div class="w-100 toast-capper bg-success"></div>
+    <div class="arrow-up arrow-warning"></div>
+    <div class="w-100 toast-capper bg-warning"></div>
     <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Success!</strong>
+        <strong class="mr-auto">Warning!</strong>
         <button class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
