--- a/static/css/base.css
+++ b/static/css/base.css
@@ -123,6 +123,23 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+/* -------------------------------- Bootstrap Toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /* Product Card */
 
 .background-green {
