--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -3,7 +3,7 @@
     <div class="arrow-up arrow-Info"></div>
     <div class="w-100 toast-capper bg-Info"></div>
     <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Alert!</strong>
+        <strong class="mr-auto">Alert!<i class="ml-2 icon-green fa-solid fa-circle-info"></i></strong>
         <button class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
