add success toast and style toast bag preview

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -123,6 +123,12 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+.bag-notification-wrapper {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 /* -------------------------------- Bootstrap Toasts */
 
 .message-container {
