--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -28,6 +28,56 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the form below to complete your order</p>
+                <form action="{% url 'checkout' %}" method="POST" id="payment_form">
+                    {% csrf_token %}
+                    <fieldset class="rounded px-3 mb-5">
+                        <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                        {{ order_form.full_name | as_crispy_field }}
+                        {{ order_form.email | as_crispy_field }}
+                    </fieldset>
+                    <fieldset class="rounded px-3 mb-5">
+                        <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
+                        {{ order_form.phone_number | as_crispy_field }}
+                        {{ order_form.country | as_crispy_field }}
+                        {{ order_form.postcode | as_crispy_field }}
+                        {{ order_form.town_or_city | as_crispy_field }}
+                        {{ order_form.street_address1 | as_crispy_field }}
+                        {{ order_form.street_address2 | as_crispy_field }}
+                        {{ order_form.county | as_crispy_field }}
+                        <div class="form-check form-check-inline foat-right mr-0">
+                            {% if user.is_authenticated %}
+                                <label for="id-save-info" class="form-check-label">Save this delivery information to my profile</label>
+                                <input type="checkbox" id="save-info" name="save-info" class="form-check-input ml-2 mr-0" checked>
+                            {% else %}
+                                <label for="id-save-info" class="form-check-label">
+                                    <a href="{% url 'account_signup' %}" class="text-info">Create an account</a> or 
+                                    <a href="{% url 'account_login' %}" class="text-info">login</a> to save this delivery information to your profile
+                                </label>
+                        </div>
+                    </fieldset>
+                    <fieldset class="rounded">
+                        <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                        <!-- Stripe Card Element -->
+                        <div class="mb-3" id="card-element"></div>
+
+                        <!-- Display form errors -->
+                        <div class="mb-3 text-danger" id="card-erros" role="alert"></div>
+                    </fieldset>
+                    <div class="submit-button text-right mt-5 mb-2">
+                        <a href="{% url 'view_bag' %}" class="btn btn-outline-green rounded-0">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="font-weight-bold">Adjust Bag</span>
+                        </a>
+                        <button type="submit" class="btn btn-green rounded-0" id="submit-button">
+                            <span class="font-weight-bold">Complete Order</span>
+                            <span class="icon">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                            <span>Your card will be charged <strong>£{{ grand_total|flotaformat:2 }}</strong></span>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
