--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,13 @@
 		{% endblock %}
 
 		{% block corecss %}
+			<!-- Bootstrap CSS -->
 			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+			<!-- Google Fonts -->
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+			<!-- Custom CSS -->
 			<link rel="stylesheet" href="{% static 'css/base.css' %}">
 		{% endblock %}
 
@@ -25,10 +28,15 @@
 		{% endblock %}
 
 		{% block corejs %}
+			<!--Font Awesome  -->
 			<script src="https://kit.fontawesome.com/66ae56075e.js" crossorigin="anonymous"></script>
+			<!-- Jquery -->
 			<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+			<!-- Booststrap JS -->
         	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+			<!-- Stripe -->
+			<script src="https://js.stripe.com/v3/"></script>
 		{% endblock %}
 
 		{% block extra_js %}
@@ -140,6 +148,7 @@
 		{% endblock %}
 
 		{% block postloadjs %}
+		<!-- Toasts -->
 			<script type="text/javascript">
 				$('.toast').toast('show');
 			</script>
