--- a/templates/base.html
+++ b/templates/base.html
@@ -46,10 +46,10 @@
 	</head>
 	<body>
 		<header class="container-fluid fixed-top">
-			<div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+			<div id="topnav" class="row bg-main pt-lg-2 d-none d-lg-flex">
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
 					<a href="{% url 'home' %}" class="nav-link main-logo-link">
-						<img src="media/logo.png" class="my-0 logo">
+						<img src="media/logo-3.png" class="my-0 logo">
 					</a>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -58,7 +58,7 @@
 							<input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
 							<div class="input-group-append">
 								<button class="form-control btn btn-green border border-black rounded-0" type="submit">
-									<span class="icon">
+									<span class="icon-dark">
 										<i class="fas fa-search"></i>
 									</span>
 								</button>
@@ -71,7 +71,7 @@
 						<li class="list-inline-item dropdown">
 							<a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<div class="text-center">
-									<div><i class=" icon-green fas fa-user fa-lg"></i></div>
+									<div><i class=" icon-dark fas fa-user fa-lg"></i></div>
 									<p class="my-0">My Account</p>
 								</div>
 							</a>
@@ -91,7 +91,7 @@
 						<li class="list-inline-item">
 							<a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
 								<div class="text-center">
-									<div><i class="icon-green fas fa-shopping-bag fa-lg"></i></div>
+									<div><i class="icon-cream fas fa-shopping-bag fa-lg"></i></div>
 									<p class="my-0">
 										{% if grand_total %}
 											£{{ grand_total|floatformat:2 }}
