--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
 						<div class="input-group w-100">
 							<input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
 							<div class="input-group-append">
-								<button class="form-control btn btn-green border border-black rounded-0" type="submit">
+								<button class="form-control btn btn-red border border-black rounded-0" type="submit">
 									<span class="icon-dark">
 										<i class="fas fa-search"></i>
 									</span>
@@ -105,7 +105,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row bg-white">
+			<div class="row bg-red">
 				<nav class="navbar navbar-expand-lg navbar-light w-100">
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
