--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -20,3 +20,4 @@
   <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
   <button type="submit">{% trans "Sign Up" %}</button>
 </form>
+{% endblock %}
