--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
+        <div class="col-7 col-md-6 my-auto home-page-box">
             <h1 class="display-4 logo-font text-black">The new collections are here</h1>
             <div>
                 <h4 class="my-5">
