--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 			<div id="topnav" class="row bg-main pt-lg-2 d-none d-lg-flex">
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
 					<a href="{% url 'home' %}" class="nav-link main-logo-link">
-						<img src="media/logo-3.png" class="my-0 logo">
+						<img src="/media/logo-3.png" class="my-0 logo">
 					</a>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
