--- a/templates/base.html
+++ b/templates/base.html
@@ -42,11 +42,11 @@
 		{% block extra_js %}
 		{% endblock %}
 
-		<title>Dynow Clothing! {% block extra_title %}{% endblock %}</title>
+		<title>Taco y Tequila {% block extra_title %}{% endblock %}</title>
 	</head>
 	<body>
 		<header class="container-fluid fixed-top">
-			<div id="topnav" class="row bg-main pt-lg-2 d-none d-lg-flex">
+			<div id="topnav" class="row top-nav pt-lg-2 d-none d-lg-flex">
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
 					<a href="{% url 'home' %}" class="nav-link main-logo-link">
 						<img src="/media/logo-3.png" class="my-0 logo">
@@ -69,10 +69,10 @@
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
 					<ul class="list-inline list-unstyled text-center text-lg-right my-0">
 						<li class="list-inline-item dropdown">
-							<a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="text-main nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<div class="text-center">
 									<div><i class=" icon-dark fas fa-user fa-lg"></i></div>
-									<p class="my-0">My Account</p>
+									<p class="my-0 text-main">My Account</p>
 								</div>
 							</a>
 							<div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -89,9 +89,9 @@
 							</div>
 						</li>
 						<li class="list-inline-item">
-							<a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+							<a class="{% if grand_total %}text-info font-weight-bold{% else %}text-main{% endif %} nav-link" href="{% url 'view_bag' %}">
 								<div class="text-center">
-									<div><i class="icon-cream fas fa-shopping-bag fa-lg"></i></div>
+									<div><i class="icon-dark fas fa-shopping-bag fa-lg"></i></div>
 									<p class="my-0">
 										{% if grand_total %}
 											£{{ grand_total|floatformat:2 }}
