--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,8 +1,8 @@
 <ul>
     <li class="list-inline-item">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="text-main nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
-              <div><i class="icon-green fas fa-search fa-lg"></i></div>
+              <div><i class="icon-dark fas fa-search fa-lg"></i></div>
               <p class="my-0">Search</p>
           </div>
       </a>
@@ -22,9 +22,9 @@
       </div>
   </li>
   <li class="list-inline-item dropdown">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="text-main nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
-              <div><i class="icon-green fas fa-user fa-lg"></i></div>
+              <div><i class="icon-dark fas fa-user fa-lg"></i></div>
               <p class="my-0">My Account</p>
           </div>
       </a>
@@ -42,9 +42,9 @@
       </div>
   </li>
   <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
+      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-main{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
           <div class="text-center">
-              <div><i class="icon-green fas fa-shopping-bag fa-lg"></i></div>
+              <div><i class="icon-dark fas fa-shopping-bag fa-lg"></i></div>
               <p class="my-0">
                   {% if grand_total %}
                       £{{ grand_total|floatformat:2 }}
