--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto home-page-box">
-            <h1 class="display-4 logo-font text-black">The new collections are here</h1>
+            <h1 class="display-4 logo-font">Explore The Spice!</h1>
             <div>
                 <h4 class="my-5">
                     <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
