--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -53,7 +53,7 @@
                 <div class="row">
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card h-100 border-0 background-green">
+                            <div class="card h-100 border-0 product-card">
                                 {% if product.image %}
                                 <a href="{% url 'product_detail' product.id %}">
                                     <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -63,25 +63,29 @@
                                     <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}no-image.jpg" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
-                                <div class="card-body pb-0 background-green">
+                                <div class="card-body pb-0 product-card">
                                     <p class="mb-0">{{ product.name }}</p>
                                 </div>
                                 <div class="card-footer pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                                            {% if product.category %}
-                                            <p class="small mt-1 mb-0">
-                                                <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
-                                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                                </a>
-                                            </p>
+                                            <div class="product-card-block product-card-block-blue">
+                                                {% if product.category %}
+                                                <p class="small mt-1 mb-1">
+                                                    <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-white mr-1 mt-1 mb-1">
+                                                        <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                                    </a>
+                                                </p>
+                                            </div>
                                             {% endif %}
+                                            <div class="product-card-block product-card-block-red">
                                             {% if product.rating %}
-                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                                <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i></i>{{ product.rating }} / 5</small>
                                             {% else %}
-                                                <small class="text-muted">No Rating</small>
+                                                <small class="text-white">No Rating</small>
                                             {% endif %}
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
