--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,6 +39,10 @@ body {
     color: #fff;
 }
 
+.text-white {
+    color: #fff;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -49,7 +53,7 @@ body {
 }
 
 .logo-font {
-    text-transform: uppercase;
+    font-family: 'Mansalva', cursive;
 }
 
 .main-logo-link {
@@ -212,10 +216,28 @@ input[name='q']::placeholder {
 
 /* Product Card */
 
-.background-green {
-    background: #7BC192;
-    color: #fff;
+.product-card {
+    background-color: var(--main-color);
+    color: var(--text-main);
     border-radius: 8px;
+}
+
+.product-card-block {
+    text-align: center;
+    border-radius: 5px;
+    padding: 1px;
+    margin: 2px;
+
+}
+
+.product-card-block-red {
+    background-color: var(--main-color-red);
+    width: 95%;
+}
+
+.product-card-block-blue {
+    background-color: var(--block-main);
+    width: 95%;
 }
 
 /* Allauth form */
