--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -27,21 +27,25 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                    {% if product.category %}
-                        <p class="small mt-1 mb-0">
-                            <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
-                                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                            </a>
-                        </p>
-                    {% endif %}
-                    {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                    {% else %}
-                        <small class="text-muted">No Rating</small>
-                    {% endif %}
+                    <div class="product-details-container mb-5 mt-md-5">
+                        <p class="mb-0">{{ product.name }}</p>
+                        <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                        <div class="product-card-block product-card-block-blue">
+                        {% if product.category %}
+                            <p class="small mt-1 mb-0">
+                                <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-white mt-1 mb-1">
+                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                </a>
+                            </p>
+                        {% endif %}
+                    </div>
+                    <div class="product-card-block product-card-block-red">
+                        {% if product.rating %}
+                            <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.rating }} / 5</small>
+                        {% else %}
+                            <small class="text-muted">No Rating</small>
+                        {% endif %}
+                    </div>
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
@@ -63,7 +67,7 @@
                                     <div class="form-group w-50">
                                         <div class="input-group input-group-{{ item.item_id }}">
                                             <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-green rounded-0"
+                                                <button class="decrement-qty btn btn-red rounded-0"
                                                     data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-minus"></i>
@@ -75,7 +79,7 @@
                                                 data-item_id="{{ product.id }}"
                                                 id="id_qty_{{ product.id }}">
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-green rounded-0"
+                                                <button class="increment-qty btn btn-red rounded-0"
                                                     data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-plus"></i>
@@ -86,13 +90,13 @@
                                     </div>
                                 </div>
                                     <div class="col{% if s %}-12 mt-2{% endif %}">
-                                        <a href="{% url 'products' %}" class="btn btn-outline-green rounded-0 mt-5">
+                                        <a href="{% url 'products' %}" class="btn btn-outline rounded-0 mt-5">
                                             <span class="icon">
                                                 <i class="fas fa-chevron-left"></i>
                                             </span>
                                             <span class="text-uppercase">Keep Shopping</span>
                                         </a>
-                                        <input type="submit" class="btn btn-green rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                        <input type="submit" class="btn btn-red rounded-0 text-uppercase mt-5" value="Add to Bag">
                                     </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
