--- a/static/css/base.css
+++ b/static/css/base.css
@@ -80,7 +80,7 @@ body {
 .btn-outline:hover,
 .btn-outline:active,
 .btn-outline:focus {
-    background: var(--main-color-red) !important;
+    background: var(--block-main) !important;
     color: white !important;
 }
 
@@ -257,6 +257,35 @@ input[name='q']::placeholder {
 
 .allauth-form-inner-content input::placeholder {
     color: #6c757d;
+}
+
+/* Footer */
+
+.text-small {
+    font-size: 0.9rem;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+a:hover, a:focus {
+    text-decoration: none;
+}
+
+.form-control {
+    background: #212529;
+    border-color: #545454;
+}
+
+.form-control:focus {
+    background: #212529;
+}
+
+footer {
+    background: var(--main-color);
 }
 
 /*  Media Queries */
