--- a/templates/base.html
+++ b/templates/base.html
@@ -149,6 +149,8 @@
 		{% block content %}
 		{% endblock %}
 
+		{% include 'includes/footer.html' %}
+
 		{% block postloadjs %}
 		<!-- Toasts -->
 			<script type="text/javascript">
