--- a/static/css/base.css
+++ b/static/css/base.css
@@ -261,26 +261,26 @@ input[name='q']::placeholder {
 
 /* Footer */
 
-.text-small {
+footer > .text-small {
     font-size: 0.9rem;
 }
 
-a {
+footer > a {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
 }
 
-a:hover, a:focus {
+footer > a:hover, a:focus {
     text-decoration: none;
 }
 
-.form-control {
+footer > .form-control {
     background: #212529;
     border-color: #545454;
 }
 
-.form-control:focus {
+footer > .form-control:focus {
     background: #212529;
 }
 
