--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,31 +4,25 @@
         <div class="container py-4">
             <div class="row gy-4 gx-5">
                 <div class="col-lg-4 col-md-6">
-                    <h5 class="h1 text-white">FB.</h5>
-                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p>
+                    <h5><img src="/media/logo-3.png" class="my-0 logo"></h5>
+                    <p class="small text-main mb-0">&copy; Copyrights. All rights reserved. Taco y Tequila</p>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="text-white mb-3">Quick links</h5>
-                    <ul class="list-unstyled text-muted">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Get started</a></li>
-                        <li><a href="#">FAQ</a></li>
+                    <h5 class="logo-font mb-3">About Us</h5>
+                    <ul class="list-unstyled text-main">
+                        <li><a href="#">How we started</a></li>
+                        <li><a href="#">Meet the team</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="text-white mb-3">Quick links</h5>
-                    <ul class="list-unstyled text-muted">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Get started</a></li>
-                        <li><a href="#">FAQ</a></li>
+                    <h5 class="logo-font mb-3">Events</h5>
+                    <ul class="list-unstyled text-main">
+                        <li><a href="#">Book an Event</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h5 class="text-white mb-3">Newsletter</h5>
-                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                    <h5 class="logo-font mb-3">Newsletter</h5>
+                    <p class="small text-main">Sign up to our newsletter to keep up to date with everything Taco y Tequila related</p>
                     <form action="#">
                         <div class="input-group mb-3">
                             <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
