style: footer, postioning to stick to bottom and not overlap other content

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,10 +1,10 @@
-<div class="d-flex flex-column h-100">
+<div class="d-flex flex-column h-100 footer">
     <!-- FOOTER -->
     <footer class="w-100 py-4 flex-shrink-0">
         <div class="container py-4">
             <div class="row gy-4 gx-5">
                 <div class="col-lg-4 col-md-6">
-                    <h5><img src="/media/logo-3.png" class="my-0 logo"></h5>
+                    <img src="/media/logo-3.png" class="my-0 logo">
                     <p class="small text-main mb-0">&copy; Copyrights. All rights reserved. Taco y Tequila</p>
                 </div>
                 <div class="col-lg-2 col-md-6">
