--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,6 +11,13 @@ html {
 }
 
 body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--main-color);
+}
+
+.hero-background {
     background: url('/media/hero.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
@@ -261,6 +268,10 @@ input[name='q']::placeholder {
 
 /* Footer */
 
+.footer {
+    padding-top: 20px;
+}
+
 footer > .text-small {
     font-size: 0.9rem;
 }
@@ -286,6 +297,8 @@ footer > .form-control:focus {
 
 footer {
     background: var(--main-color);
+    bottom: 0;
+    padding: 5px;
 }
 
 /*  Media Queries */
