--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -11,7 +11,7 @@
                     <h5 class="logo-font mb-3">About Us</h5>
                     <ul class="list-unstyled text-main">
                         <li><a href="#">How we started</a></li>
-                        <li><a href="#">Meet the team</a></li>
+                        <li><a href="{% url 'meet_the_team' %}">Meet the team</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
