--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -10,7 +10,7 @@
                 <div class="col-lg-2 col-md-6">
                     <h5 class="logo-font mb-3">About Us</h5>
                     <ul class="list-unstyled text-main">
-                        <li><a href="#">How we started</a></li>
+                        <li><a href="{% url 'how_we_started' %}">How we started</a></li>
                         <li><a href="{% url 'meet_the_team' %}">Meet the team</a></li>
                     </ul>
                 </div>
