--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -10,14 +10,14 @@
                 <div class="col-lg-2 col-md-6">
                     <h5 class="logo-font mb-3">About Us</h5>
                     <ul class="list-unstyled text-main">
-                        <li><a href="{% url 'how_we_started' %}">How we started</a></li>
-                        <li><a href="{% url 'meet_the_team' %}">Meet the team</a></li>
+                        <li><a href="{% url 'how_we_started' %}" class="text-main">How we started</a></li>
+                        <li><a href="{% url 'meet_the_team' %}" class="text-main">Meet the team</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="logo-font mb-3">Events</h5>
+                    <h5 class="logo-font mb-3" >Events</h5>
                     <ul class="list-unstyled text-main">
-                        <li><a href="#">Book an Event</a></li>
+                        <li><a href="#" class="text-main">Book an Event</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -26,7 +26,7 @@
                     <form action="#">
                         <div class="input-group mb-3">
                             <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                            <button class="btn btn-primary" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
+                            <button class="btn btn-red" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
                         </div>
                     </form>
                 </div>
