--- a/events/templates/book_event.html
+++ b/events/templates/book_event.html
@@ -1,51 +1,51 @@
-<title>Online Booking</title>
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
+
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
-
-
-
-
-{% if user.is_authenticated %}
-<h1 class="text-center  mt-3">Online Booking</h1>
-
-<div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5 ">
-    <form method="post" action="{% url 'book_event' %}" class="me-2 ms-2" required>
-        {% csrf_token %}
-        <!--input service-->
-        <div>
-            <h3 class="">Select Service:</h3>
-            <select class="form-select fs-3" name="service">
-                <option value="Doctor care">Doctor care</option>
-                <option value="Nursing care">Nursing care</option>
-                <option value="Medical social services">Medical social services</option>
-                <option value="Homemaker or basic assistance care">Homemaker or basic assistance care</option>
-            </select>
-        </div>
-            <!--input day-->
-            <div class="mt-3">
-                <h3 class="">Select Day:</h3>
-                <select class="form-select fs-3" name="day">
-                    {% for valid_weekday in validate_weekdays %}
-                    <option value="{{valid_weekday}}">{{valid_weekday}}</option>
-                    {% endfor %}
-                </select>
+    <div class="overlay"></div>
+    <div class="container-fluid">
+        <div class="row mb-5 mt-5">
+            <div class="col text-center mt-3">
+                <h2 class="logo-font">Book An Event with us</h2>
+                <hr class="w-50 mb-1">
             </div>
-
-            <br/>
-            <button type="submit" class="btn btn-primary text-white">Continue</button>
         </div>
-    </form>
-</div>
-
-{% else %}
-
-<div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5 ">
-    <h1 class="p-2  me-3">You Are Not Signed in!</h1>
-    <a href="{% url 'register' %}" class="btn btn-primary shadow text-center">Sign in</a>
-</div>
-
-{% endif %}
-
-
+        <div class="row">
+            <div class="product-container col-10 offset-1">
+                <div class="row">
+                    <form method="post" action="{% url 'book_event' %}" class="me-2 ms-2" required>
+                        {% csrf_token %}
+                        <!--input service-->
+                        <div>
+                            <h3 class="logo-font">Select Event Type</h3>
+                            <select class="form-select fs-3" name="event_type">
+                                <option value="Fajita Party">Fajita Party</option>
+                                <option value="Taco Party">Taco Party</option>
+                                <option value="Taco y Tequila Special">Taco y Tequila Special</option>
+                            </select>
+                        </div>
+                        <!--input day-->
+                        <div class="mt-3">
+                            <h3 class="logo-font">Select Day:</h3>
+                            <select class="form-select fs-3" name="day">
+                                {% for valid_weekday in validate_weekdays %}
+                                <option value="{{valid_weekday}}">{{valid_weekday}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <br/>
+                        <button type="submit" class="btn btn-red rounded-0">Continue</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
