--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="product-card-block product-card-block-red">
                         {% if product.rating %}
-                            <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.rating }} / 5</small>
+                            <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spice_rating }} / 5</small>
                         {% else %}
                             <small class="text-muted">No Rating</small>
                         {% endif %}
