updated color theme

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 :root {
-    --main-color: #F2BE22;
-    --main-color-red: #F24C3D;
+    --main-color: #cce293;
+    --main-color-red: #509bb9;
     --text-main: #1B365C;
     --block-main: #1B365C;
     ;
