--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,7 @@
 			<!-- Google Fonts -->
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mansalva&display=swap" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500&family=Paytone+One&display=swap" rel="stylesheet">
 			<!-- Custom CSS -->
 			<link rel="stylesheet" href="{% static 'css/base.css' %}">
 		{% endblock %}
