add height and width to logo

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@
     --main-color: #cce293;
     --main-color-red: #40724e;
     --text-main: #1B365C;
-    --block-main: #b7c2ec;
+    --block-main: #;
   }
 
 p {
