--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
 		<header class="container-fluid fixed-top">
 			<div id="topnav" class="row top-nav pt-lg-2 d-none d-lg-flex">
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-					<a href="{% url 'home' %}" class="nav-link main-logo-link">
+					<a href="{% url 'home' %}" class="nav-link main-logo-link" height="40px" width="40px">
 						<img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" class="my-0 logo">
 					</a>
 				</div>
