add dark text for main hero box

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,8 @@
 :root {
     --main-color: #cce293;
     --main-color-red: #40724e;
-    --text-main: #1B365C;
-    --block-main: #;
+    --text-main: #0C1829;
+    --block-main: #3abeff;
   }
 
 p {
