style: font size decrease on hero text box for mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -401,4 +401,8 @@ footer {
     .increment-qty, .decrement-qy {
         padding: .25rem .5rem !important;
     }
+
+    .hero-box-text {
+        font-size: .8rem;
+    }
 }
