--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
 				</nav>
 			</div>
 			<div id="deliver-banner" class="row text-center">
-				<div class="col block-main">
+				<div class="col bg-main">
 					<h4 class="logo-font my-1 text-main">Free delivery on orders over £{{ free_delivery_threshold }}</h4>
 				</div>
 			</div>
