--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,8 @@
 <div class="hero-background">
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto home-page-box">
-                <h1 class="display-4 logo-font text-main">Explore The Spice!</h1>
+            <div class="col-7 col-md-6 col-sm-4 my-auto home-page-box">
+                <h1 class="display-4 logo-font text-main hero-box-text">Explore The Spice!</h1>
                 <div>
                     <h4 class="my-5">
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
