add new hero box color

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@
     --main-color: #cce293;
     --main-color-red: #40724e;
     --text-main: #0C1829;
-    --block-main: #0081C9;
+    --block-main: #22A699;
   }
 
 p {
