style: homepage box text sixe

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -402,7 +402,7 @@ footer {
         padding: .25rem .5rem !important;
     }
 
-    .hero-box-text {
+    .home-page-box h1 {
         font-size: .8rem;
     }
 }
