fix typo in last commit

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -49,7 +49,7 @@
                             <p><strong>Subtotal: </strong>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                         </div>
                         <div class="col-12 col-sm-6">
-                            {% include 'bag/quantity-form.html %}
+                            {% include 'bag/quantity-form.html' %}
                         </div>
                     </div>
                     <div class="row">
@@ -82,10 +82,10 @@
                             {% include 'bag/product-image.html' %}
                         </td>
                         <td class="py-3">
-                            {% include 'bag/product-info.html ' %}
+                            {% include 'bag/product-info.html' %}
                         </td>
                         <td class="py-3">
-                            <p class="my-0">£{{item.product.price }}</p>
+                            <p class="my-0">£{{ item.product.price }}</p>
                         </td>
                         <td class="py-3 w-25">
                          {% include 'bag/quatity-form.html' %}
