readme: add user stories feature 1

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column h-100 footer">
+<div class="d-flex flex-column footer">
     <!-- FOOTER -->
     <footer class="w-100 py-4 flex-shrink-0">
         <div class="container py-4">
