fix: html validator spotted few issues with base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,9 @@
 
 <!doctype html>
 <html lang="en">
-
 	<head>
 		{% block meta %}
-			<meta http-equiv="X-UA_compatible" content="ie=edge">
+			<meta http-equiv="X-UA-compatible" content="ie=edge">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% endblock %}
@@ -49,7 +48,7 @@
 			<div id="topnav" class="row top-nav pt-lg-2 d-none d-lg-flex">
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
 					<a href="{% url 'home' %}" class="nav-link main-logo-link">
-						<img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" alt="taco-y-tequila logo" class="my-0 logo" height="80px" width="80px">
+						<img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" alt="taco-y-tequila logo" class="my-0 logo" height="80" width="80">
 					</a>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
