--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,7 +4,8 @@
         <div class="container py-4">
             <div class="row gy-4 gx-5">
                 <div class="col-lg-4 col-md-6">
-                    <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" class="my-0 logo" height="80px" width="80px" alt="taco-y-tequila logo">
+                    <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" class="my-0 logo"
+                        height="80" width="80" alt="taco-y-tequila logo">
                     <p class="small text-main mb-0">&copy; Copyrights. All rights reserved. Taco y Tequila</p>
                 </div>
                 <div class="col-lg-2 col-md-6">
@@ -15,21 +16,25 @@
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <p class="logo-font mb-3" >Events</p>
+                    <p class="logo-font mb-3">Events</p>
                     <ul class="list-unstyled text-main">
-                        <li><a href="{% url 'book_event' %}"" class="text-main">Book an Event</a></li>
+                        <li><a href="{% url 'book_event' %}" class="text-main">Book an Event</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <p class="logo-font mb-3">Newsletter</p>
-                    <p class="small text-main">Sign up to our newsletter to keep up to date with everything Taco y Tequila related</p>
+                    <p class="small text-main">Sign up to our newsletter to keep up to date with everything Taco y
+                        Tequila related</p>
                     <form action="#">
                         <div class="input-group mb-3">
-                            <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                            <button class="btn btn-red" aria-label="Subscribe to newsletter" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
+                            <input class="form-control" type="text" placeholder="Recipient's username"
+                                aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <button class="btn btn-red" aria-label="Subscribe to newsletter" id="button-addon2"
+                                type="button"><i class="fas fa-paper-plane"></i></button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </footer>
+</div>
