--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -9,7 +9,7 @@
       <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
           <form class="form" method="GET" action="{% url 'products' %}">
               <div class="input-group w-100">
-                  <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" id="search">
+                  <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" id="search-for-mobile">
                   <div class="input-group-append">
                       <button class="btn-green form-control btn btn-black border border-black rounded-0" type="submit">
                           <span class="icon">
@@ -22,13 +22,13 @@
       </div>
   </li>
   <li class="list-inline-item dropdown">
-      <a class="text-main nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="text-main nav-link d-block d-lg-none" href="#" id="mobile-user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
               <div><i class="icon-dark fas fa-user fa-lg"></i></div>
               <p class="my-0">My Account</p>
           </div>
       </a>
-      <div class="dropdown-menu border-0" aria-labelledby="user-options">
+      <div class="dropdown-menu border-0" aria-labelledby="mobile-user-options">
           {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
                   <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
