fix: renamed spice_rating to spicerating

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -40,8 +40,8 @@
                         {% endif %}
                     </div>
                     <div class="product-card-block product-card-block-red">
-                        {% if product.spice_rating %}
-                            <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spice_rating }} / 5</small>
+                        {% if product.spicerating %}
+                            <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spicerating }} / 5</small>
                         {% else %}
                             <small class="text-muted">No Rating</small>
                         {% endif %}
